# django-n-postgres

./: .env.example  .gitignore  Makefile  README.md  docker-compose.develop.yml  docker-compose.local.yml
src/: .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  Dockerfile.local  celery.sh  entrypoint.local.sh  entrypoint.sh  gunicorn.config.py  jaeger.py  manage.py  pyproject.toml
src/config/: celery.py  celery_config.py  config.py  settings.py  urls.py
src/config/di/: dev.py  test.py
src/utils/: decorators.py  exceptions.py  logging.py  middleware.py  mixins.py  models.py  pagination.py  repo.py  serializers.py  time.py
